<resources>
    <string name="app_name">Mobi TV</string>
    <string name="title_email">Email</string>
    <string name="title_password">Mật khẩu</string>
    <string name="title_login">Đăng nhập</string>
    <string name="title_error">Lỗi</string>
    <string name="msg_email_error">The email format is invalid</string>
    <string name="msg_password_error">Password is too short</string>
    <string name="ok">ĐỒNG Ý</string>
    <string name="cancel">HỦY</string>
    <string name="see_all">Xem tất cả</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_home_page">Trang chủ</string>
    <string name="title_network_lost">Lỗi kết nối</string>
    <string name="msg_network_lost">Không có kết nối mạng. Vui lòng thử lại!</string>
    <string name="splash_desc">Hoàn toàn miễn phí data 3G</string>
    <string name="view_more">thêm</string>
    <string name="favorite">Yêu thích</string>
    <string name="tab_danh_sach">DANH SÁCH</string>
    <string name="tab_lien_quan">LIÊN QUAN</string>
    <string name="tab_binh_luan">BÌNH LUẬN</string>
    <string name="loading">Đang tải…</string>
    <string name="no_data">Không có dữ liệu.</string>
    <string name="title_tv_home">TV</string>
    <string name="title_video_home">Video</string>
    <string name="title_film_home">Phim</string>
    <string name="title_kids_home">Kids</string>
    <string name="title_game_home">Game</string>
    <string name="title_postage_package">Gói cước</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_setting">Thiết lập</string>
    <string name="title_share">Chia sẻ</string>
    <string name="title_rate_app">Đánh giá ứng dụng</string>
    <string name="tag">Tags:\u0020</string>
    <string name="team">Giải đấu:\u0020</string>
    <string name="actor_format">Diễn viên:\u0020%s</string>
    <string name="country_format">Quốc gia:\u0020%s</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="retry">Retry</string>
    <string name="logging">Logging</string>
    <string name="link_stream_not_found">Không tìm thấy link xem.</string>
    <string name="send">GỬI</string>
    <string name="title_quality">Chọn chất lượng</string>
    <string name="title_playlist">Chọn tập</string>
    <string name="title_speed">Chọn tốc độ</string>
    <string name="title_report">Báo cáo</string>
    <string name="tab_schedule">LỊCH CHIẾU</string>
    <string name="subscribe_get_notification">Nhận thông báo</string>
    <string name="default_zero">0</string>
    <string name="default_time_mm_ss">00:00</string>
    <string name="value_quality_auto">Tự động</string>
    <string name="value_quality_360">360p</string>
    <string name="value_quality_480">480p</string>
    <string name="value_quality_720">720p</string>
    <string name="value_quality_1080">1080p</string>
    <string name="report_cant_play">Không xem được</string>
    <string name="report_inappropriate_content">Nội dung bạo lực</string>
    <string name="report_low_quality">Chất lượng kém</string>
    <string name="report_loading_slow">Load chậm, chập chờn</string>
    <string name="speed_0_5">0.5x</string>
    <string name="speed_normal">Chuẩn</string>
    <string name="speed_1_5">1.5x</string>
    <string name="speed_2_0">2.0x</string>
    <string name="title_player_quality">CHẤT LƯỢNG</string>
    <string name="title_player_speed">TỐC ĐỘ</string>
    <string name="title_player_report">BÁO CÁO</string>
    <string name="title_player_retry">THỬ LẠI</string>
    <string name="label_live">Trực tiếp</string>
    <string name="error_cant_report_now">Hiện không thể gửi Báo cáo bây giờ. Vui lòng thử lại sau
    </string>
    <string name="send_report_successful">Gửi báo cáo thành công</string>
    <string name="hint_search">Tìm kiếm TV, Video và Phim</string>
    <string name="cant_get_data">Hiện không thể tải dữ liệu. Vui lòng thử lại sau</string>
</resources>